Implementing students performance page

--- a/src/app/pages/single-notebook-page/single-notebook-page.component.html
+++ b/src/app/pages/single-notebook-page/single-notebook-page.component.html
@@ -63,8 +63,9 @@ type="edit" title="Editar Caderneta">
 
 
     <div class="interactive-txts-container">
-        <h1 (click)="navigateToLessons()" class="interactive-txt">Ver Aulas</h1>
-        <h1 (click)="navigateToWorks()" class="interactive-txt">Ver Ferramentas de Avaliação</h1>
+        <h1 (click)="navigateToUrl('aulas')" class="interactive-txt">Ver Aulas</h1>
+        <h1 (click)="navigateToUrl('trabalhos')" class="interactive-txt">Ver Ferramentas de Avaliação</h1>
+        <h1 (click)="navigateToUrl('alunos-performace')" class="interactive-txt">Ver Desempenho dos Alunos</h1>
     </div>
 
 
