--- a/src/app/components/list-elements/attendance-dialog-list-element-2/attendance-dialog-list-element-2.component.css
+++ b/src/app/components/list-elements/attendance-dialog-list-element-2/attendance-dialog-list-element-2.component.css
@@ -23,10 +23,6 @@
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-.attendance-dialog-student-container div input {
-    cursor: pointer;
-}
-
 
 
 
@@ -34,7 +30,8 @@
     padding: 1px 7px !important;
     border-radius: 2.5px;
     color: #E0E0E0;
-    font-weight: bold;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 500;
     cursor: pointer;
 }
 
