--- a/src/app/components/dialog-elements/attendances-dialog/attendances-dialog.component.html
+++ b/src/app/components/dialog-elements/attendances-dialog/attendances-dialog.component.html
@@ -65,7 +65,9 @@
     <div *ngIf="attendanceStatus == 'loaded'" class="dialog-footer-container">
         <div class="dialog-warning-container">
             <img src="../../../../assets/alert_7586991.png">
-            <p>Marque os alunos que NÃO estão presentes</p>
+            <p>
+                C - Compareceu | F - Faltou
+            </p>
         </div>
 
 
