--- a/src/app/components/dialog-elements/lesson-dialog/lesson-dialog.component.html
+++ b/src/app/components/dialog-elements/lesson-dialog/lesson-dialog.component.html
@@ -25,8 +25,8 @@
 
 
         <div>
-            <p>*Desenvolivimento:</p>
-            <input class="dialog-input" type="text" placeholder="Insira o desenvolivimento (obrigatório)" 
+            <p>*Desenvolvimento:</p>
+            <input class="dialog-input" type="text" placeholder="Insira o desenvolvimento (obrigatório)" 
             [(ngModel)]="details">
         </div>
 
