--- a/src/app/components/list-elements/lesson-list-element/lesson-list-element.component.css
+++ b/src/app/components/list-elements/lesson-list-element/lesson-list-element.component.css
@@ -1,6 +1,66 @@
+.inflate-container {
+    position: fixed;
+    width: 165px;
+    height: 80px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 2.5px;
+    background-color: #E0E0E0;
+}
+
+.inflate-child {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 2.5px;
+    font-size: large;
+}
+
+.inflate-child:hover {
+    cursor: pointer;
+    background-color: #bebebe !important;
+}
+
+.inflate-child p {
+    margin-left: 5px;
+}
+
+.inflate-division-line {
+    width: 100%;
+    height: 1px;
+    margin: 2.5px 0px;
+    border: 0;
+    background-color: #888888 !important;
+}
+
+.red-txt {
+    color: #e03437;
+}
+
+
+
+
 .lesson-list-element-container {
     height: 155px;
 }
+
+
+
+
+.disabled {
+    cursor: default !important;
+}
+
+.disabled:hover {
+    background-color: rgba(86, 31, 131, 0.856);
+}
+
+
+
 
 .box-first-section-container {
     margin-top: 15px;
