--- a/src/app/components/list-elements/lesson-list-element/lesson-list-element.component.css
+++ b/src/app/components/list-elements/lesson-list-element/lesson-list-element.component.css
@@ -46,6 +46,10 @@
 
 .lesson-list-element-container {
     height: 155px;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 
