--- a/src/app/pages/admin-page/admin-page.component.css
+++ b/src/app/pages/admin-page/admin-page.component.css
@@ -1,66 +1,51 @@
-* {
-    background-color: #d1d1d1;
-
-}
-
-h1 {
-    font-family: "Roboto Condensed", sans-serif !important;
-}
-
 .admin-page-container {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+
+
+
+
+.institution-container {
     width: 100%;
-    height: 100%;
-    padding-bottom: 417px;
-    padding-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.page-input {
+    width: 400px;
+    text-align: center;
+    color: black;
 }
 
 
 
 
-.title-container {
-    width: 1000px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.gray-hover:hover {
-    cursor: pointer;
-    background-color: #bebebe !important;
-}
-
-
-
-
-.title-container-container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.user-txt {
-    max-width: 350px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: x-large;
-    font-weight: 600;
-}
-
-
-
-
-.notebooks-container {
-    width: 1000px;
-    margin-top: 35px;
+.tools-container {
+    margin-top: 25px;
     display: grid;
-    justify-items: center;
+    grid-template-columns: auto auto auto;
+    gap: 25px 100px;
+    justify-content: center;
+}
+
+.tool {
+    width: 250px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 10px;
-    grid-template-columns: 333px 333px 333px;
+    border-radius: 5px;
+    border: 1px solid #77538fbd;
+    background-color: #E0E0E0;
+}
+
+.tool img, p {
+    background-color: transparent;
 }
