--- a/src/app/pages/home-page/home-page.mobile.component.css
+++ b/src/app/pages/home-page/home-page.mobile.component.css
@@ -1,6 +1,6 @@
 @media screen and (width <= 1014px) {
     
-    .notebooks-container {
+    .home-content-container {
         width: 754px;
         gap: 0;
         row-gap: 20px;
@@ -15,7 +15,7 @@
 
 @media screen and (width <= 768px) {
 
-    .notebooks-container {
+    .home-content-container {
         width: 350px;
         gap: 20px;
         grid-template-columns: auto;
