--- a/src/app/components/dialog-elements/dialog-shared-elements/css-shared-elements.css
+++ b/src/app/components/dialog-elements/dialog-shared-elements/css-shared-elements.css
@@ -60,12 +60,13 @@
 }
 
 .dialog-select, .dialog-input {
+    box-sizing: border-box;
     width: 100%;
-    max-width: 100%;
     height: 30px;
+    padding: 0px 10px;
     border-radius: 5px;
     border: 0;
-    background-color: #d6d6d6e7;
+    background-color: #945e9b25;
     font-family: 'Roboto Condensed', sans-serif;
     color: black;
 }
