--- a/src/app/components/dropdown/dropdown.component.css
+++ b/src/app/components/dropdown/dropdown.component.css
@@ -9,11 +9,22 @@
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+.dialog-input {
+  box-sizing: border-box;
+  width: 100%;
+  height: 30px;
+  padding: 0px 10px;
+  border-radius: 5px;
+  border: 0;
+  background-color: #945e9b25;
+  font-family: 'Roboto Condensed', sans-serif;
+  color: black;
+}
+
 
 
 
 .dropdown-container {
-  width: 360px;
   max-height: 150px;
   margin-top: 5px;
   overflow-y: scroll;
