--- a/src/app/pages/change-password-page/change-password-page.component.css
+++ b/src/app/pages/change-password-page/change-password-page.component.css
@@ -1,85 +1,38 @@
-h1, p {
-    text-align: center;
-    color: #EFEFEF;
-}
-
-p {
-    font-size: 25px;
-}
-
 .change-password-container {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 208px;
     padding-top: 50px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
 
-.content-container {
-    width: 325px;
-    height: 100%;
-    margin-top: 45px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
+
+
+.page-content-container {
+    width: 350px;
 }
 
-.title-txt {
-    text-align: center;
+.page-info-container {
+    width: 350px;
 }
 
-.form {
-    width: 100%;
-    margin-top: 50px;
+.page-input {
+    border: 1px solid #7932a8;
+    background-color: #9524a41a;
 }
 
-input {
-    width: 100%;
-    height: 50px;
-    margin-bottom: 10px;
-    border: 0;
-    border-radius: 2.5px;
-    padding-left: 10px;
-    background-color: #EFEFEF4D;
-    font-family: 'Roboto', sans-serif;
-    color: #EFEFEF;
-}
 
-.form input::placeholder {
-    color: #efefefb0;
-}
 
-.btns-container {
-    width: 100%;
+
+.page-btns-container {
     margin-top: 25px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 35px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
-.btns-container button {
-    width: 300px;
-    height: 35px;
-    border: 0;
-    border-radius: 2.5px;
-    cursor: pointer;
+.page-btn {
+    color: #fffedd;
+    font-family: "Roboto Condensed", sans-serif !important;
+    font-weight: 500;
     font-size: medium;
-    font-family: 'Bebas Neue', sans-serif;
-    color: #EFEFEF;
-}
-
-.red-btn {
-    background-color: #e03437;
-}
-
-.red-btn:hover {
-    background-color: #e03437b9;
 }
