--- a/src/app/pages/change-password-page/change-password-page.component.html
+++ b/src/app/pages/change-password-page/change-password-page.component.html
@@ -1,41 +1,37 @@
 <app-status-dialog
-*ngIf="isStatusMode" [type]="'error'"
+*ngIf="isStatusMode" [type]="statusType"
 [title]="statusTitle" [content]="statusContent"
 (destroyButtonClick)="setStatusModeFalse()">
 </app-status-dialog>
 
+
+
+
 <div class="change-password-container">
-    <div [ngSwitch]="currentStatus" class="content-container">
+    <h1 class="page-title-txt">Mudar Senha</h1>
 
-        <div *ngSwitchCase="'normal'">
-            <h1 class="title-txt">Mudar Senha</h1>
-            <div class="form">
-                <div>
-                    <input type="password" placeholder="Insira sua nova senha"
-                    [(ngModel)]="password">
-                </div>
-                <div>
-                    <input type="password" placeholder="Confirme sua nova senha"
-                    [(ngModel)]="confPassword">
-                </div>
-            </div>
-            <div class="btns-container">
-                <button (click)="changePassword()" class="red-btn">Confirmar</button>
-            </div>
+    
+
+
+    <div class="page-content-container">
+        <div class="page-info-container">
+            <input class="page-input" placeholder="Insira seu email" [disabled]="isUserFound"
+            [(ngModel)]="userEmail">
         </div>
-
-        <div *ngSwitchCase="'success'">
-            <h1 class="title-txt">Senha Alterada Com Sucesso!</h1>
-            <p>Senha alterada com sucesso, tudo certo para voltar com os trabalhos ;)</p>
-            <div class="btns-container">
-                <button [routerLink]="['/cadernetas']" class="red-btn">Voltar Para Home</button>
-            </div>
+        <div *ngIf="isUserFound" class="page-info-container">
+            <input class="page-input" type="password" placeholder="Insira sua nova senha" 
+            [(ngModel)]="password">
         </div>
-
-        <div *ngSwitchCase="'error'">
-            <h1 class="title-txt">Ops, Algo Deu Errado :(</h1>
-            <p>Alguma coisa não está funcionando bem, verifique as informações e tente novamente mais tarde.</p>
+        <div *ngIf="isUserFound" class="page-info-container">
+            <input class="page-input" type="password" placeholder="Cofirme sua nova senha" 
+            [(ngModel)]="confPassword">
         </div>
+    </div>
 
+
+
+
+    <div class="page-btns-container">
+        <button (click)="btnOnClick()" class="page-btn purple-btn">{{btnText}}</button>
     </div>
 </div>
