Change route to '/change-password'

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -32,7 +32,7 @@
 
 
         <div class="interactive-txts-container">
-            <p [routerLink]="['/mudar-senha-request']" class="forgot-password-txt">Esqueceu sua senha?</p>
+            <p [routerLink]="['/change-password']" class="forgot-password-txt">Esqueceu sua senha?</p>
             <p class="login-create-interactive-txt">Não tem uma conta? <a [routerLink]="['/criar']" class="clickable-txt">Crie uma agora</a></p>
         </div>
     </div>
