Adding finished notebook components

--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -43,6 +43,11 @@
                     <img src="../../../assets/graduation.png">
                     <p class="tool-txt">Alunos</p>
                 </div>
+
+                <div (click)="navigateToPages('final-grades')" class="tool page-gray-hover">
+                    <img src="../../../assets/exam.png">
+                    <p class="tool-txt">Médias Finais</p>
+                </div>
             </div>
         </div>
     </div>
