--- a/src/app/pages/single-notebook-page/single-notebook-page.component.html
+++ b/src/app/pages/single-notebook-page/single-notebook-page.component.html
@@ -66,8 +66,8 @@ type="edit" title="Editar Caderneta">
         <h1 (click)="navigateToUrl('aulas')" class="interactive-txt">Ver Aulas</h1>
         <h1 (click)="navigateToUrl('trabalhos')" class="interactive-txt">Ver Ferramentas de Avaliação</h1>
         <h1 (click)="navigateToUrl('alunos-performace')" class="interactive-txt">Ver Desempenho dos Alunos</h1>
+        <h1 *ngIf="endDate != null" (click)="navigateToUrl('finished')" class="interactive-txt">Médias Finais</h1>
     </div>
-
 
 
 
